syntax = "proto3";

package user;

option java_package = "user";
option java_outer_classname = "UserServiceOuterClass";

service UserService {
  rpc GetUserById(GetUserRequest) returns (UserResponse);
}

message GetUserRequest {
  int64 id = 1;
}

message UserResponse {
  int64 id = 1;
  string role = 2;
  string fullName = 3;
  string login = 4;
  string email = 5;
  string phoneNumber = 6;
  string workplaceLocation = 7;
}